@@ -1,3 +1,8 @@
+2019-12-26 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src\base\gschem_parsecmd.c: gschem: Add command line options to list
+      sessions.
+
 2019-12-25 Wiley E. Hill <wileyhill@gmail.com>
 
 	* src/iface/i_sessions.c: Add function i_sessions_list_sessions.
